crates/engine-v2/query-solver/src/tests/snapshots/engine_v2_query_solver__tests__mutation__consecutive_subgraphs-solved.snap
---
source: engine/crates/engine-v2/query-solver/src/tests/mutation.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"id\", color=forestgreen ]\n    2 [ label = \"upc\", color=forestgreen ]\n    3 [ label = \"id\", color=forestgreen ]\n    4 [ label = \"Root#reviews\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    5 [ label = \"createReview#reviews\", shape=box, color=dodgerblue, color=forestgreen ]\n    6 [ label = \"id#reviews\", shape=box, color=dodgerblue, color=forestgreen ]\n    7 [ label = \"Root#products\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    8 [ label = \"createProduct#products\", shape=box, color=dodgerblue, color=forestgreen ]\n    9 [ label = \"upc#products\", shape=box, color=dodgerblue, color=forestgreen ]\n    10 [ label = \"Root#accounts\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    11 [ label = \"createUser#accounts\", shape=box, color=dodgerblue, color=forestgreen ]\n    12 [ label = \"id#accounts\", shape=box, color=dodgerblue, color=forestgreen ]\n    13 [ label=\"\", style=dashed]\n    0 -> 4 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    4 -> 5 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    5 -> 6 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    6 -> 3 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    0 -> 7 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    7 -> 8 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    8 -> 9 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    9 -> 2 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    0 -> 10 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    10 -> 11 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    11 -> 12 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    12 -> 1 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    13 -> 0 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "id", steiner=1 ]
    2 [ label = "upc", steiner=1 ]
    3 [ label = "id", steiner=1 ]
    4 [ label = "Root#reviews", steiner=1 ]
    5 [ label = "createReview#reviews", steiner=1 ]
    6 [ label = "id#reviews", steiner=1 ]
    7 [ label = "Root#products", steiner=1 ]
    8 [ label = "createProduct#products", steiner=1 ]
    9 [ label = "upc#products", steiner=1 ]
    10 [ label = "Root#accounts", steiner=1 ]
    11 [ label = "createUser#accounts", steiner=1 ]
    12 [ label = "id#accounts", steiner=1 ]
    13 [ label="", style=dashed]
    0 -> 4 [ cost=0, steiner=1]
    4 -> 5 [ cost=0, steiner=1]
    5 -> 6 [ cost=0, steiner=1]
    6 -> 3 [ cost=0, steiner=1]
    0 -> 7 [ cost=0, steiner=1]
    7 -> 8 [ cost=0, steiner=1]
    8 -> 9 [ cost=0, steiner=1]
    9 -> 2 [ cost=0, steiner=1]
    0 -> 10 [ cost=0, steiner=1]
    10 -> 11 [ cost=0, steiner=1]
    11 -> 12 [ cost=0, steiner=1]
    12 -> 1 [ cost=0, steiner=1]
    13 -> 0 [ cost=0, steiner=0]
}
