crates/engine-v2/query-solver/src/tests/snapshots/engine_v2_query_solver__tests__mutation__consecutive_subgraphs_with_multiple_fields-finalized-solution.snap
---
source: engine/crates/engine-v2/query-solver/src/tests/mutation.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Root#reviews\", color=royalblue,shape=parallelogram ]\n    2 [ label = \"updateReview\" ]\n    3 [ label = \"id\" ]\n    4 [ label = \"createReview\" ]\n    5 [ label = \"id\" ]\n    6 [ label = \"Root#products\", color=royalblue,shape=parallelogram ]\n    7 [ label = \"updateProduct\" ]\n    8 [ label = \"upc\" ]\n    9 [ label = \"createProduct\" ]\n    10 [ label = \"upc\" ]\n    11 [ label = \"Root#accounts\", color=royalblue,shape=parallelogram ]\n    12 [ label = \"updateUser\" ]\n    13 [ label = \"id\" ]\n    14 [ label = \"createUser\" ]\n    15 [ label = \"id\" ]\n    0 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    11 -> 6 [ label = \"\", color=red ]\n    2 -> 3 [ label = \"\" ]\n    12 -> 13 [ label = \"\" ]\n    4 -> 5 [ label = \"\" ]\n    0 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    6 -> 1 [ label = \"\", color=red ]\n    7 -> 8 [ label = \"\" ]\n    14 -> 15 [ label = \"\" ]\n    9 -> 10 [ label = \"\" ]\n    0 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    11 -> 14 [ label = \"\" ]\n    11 -> 12 [ label = \"\" ]\n    6 -> 9 [ label = \"\" ]\n    6 -> 7 [ label = \"\" ]\n    1 -> 4 [ label = \"\" ]\n    1 -> 2 [ label = \"\" ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "Root#reviews" ]
    2 [ label = "updateReview" ]
    3 [ label = "id" ]
    4 [ label = "createReview" ]
    5 [ label = "id" ]
    6 [ label = "Root#products" ]
    7 [ label = "updateProduct" ]
    8 [ label = "upc" ]
    9 [ label = "createProduct" ]
    10 [ label = "upc" ]
    11 [ label = "Root#accounts" ]
    12 [ label = "updateUser" ]
    13 [ label = "id" ]
    14 [ label = "createUser" ]
    15 [ label = "id" ]
    0 -> 1 [ label = "QueryPartition" ]
    11 -> 6 [ label = "MutationExecutedAfter" ]
    2 -> 3 [ label = "Field" ]
    12 -> 13 [ label = "Field" ]
    4 -> 5 [ label = "Field" ]
    0 -> 6 [ label = "QueryPartition" ]
    6 -> 1 [ label = "MutationExecutedAfter" ]
    7 -> 8 [ label = "Field" ]
    14 -> 15 [ label = "Field" ]
    9 -> 10 [ label = "Field" ]
    0 -> 11 [ label = "QueryPartition" ]
    11 -> 14 [ label = "Field" ]
    11 -> 12 [ label = "Field" ]
    6 -> 9 [ label = "Field" ]
    6 -> 7 [ label = "Field" ]
    1 -> 4 [ label = "Field" ]
    1 -> 2 [ label = "Field" ]
}
