crates/engine-v2/query-solver/src/tests/snapshots/engine_v2_query_solver__tests__mutation__consecutive_subgraphs_with_multiple_fields-graph.snap
---
source: engine/crates/engine-v2/query-solver/src/tests/mutation.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"id\" ]\n    2 [ label = \"createUser\" ]\n    3 [ label = \"id\" ]\n    4 [ label = \"updateUser\" ]\n    5 [ label = \"upc\" ]\n    6 [ label = \"createProduct\" ]\n    7 [ label = \"upc\" ]\n    8 [ label = \"updateProduct\" ]\n    9 [ label = \"id\" ]\n    10 [ label = \"createReview\" ]\n    11 [ label = \"id\" ]\n    12 [ label = \"updateReview\" ]\n    13 [ label = \"Root#reviews\", shape=parallelogram, color=dodgerblue ]\n    14 [ label = \"updateReview#reviews\", shape=box, color=dodgerblue ]\n    15 [ label = \"id#reviews\", shape=box, color=dodgerblue ]\n    16 [ label = \"createReview#reviews\", shape=box, color=dodgerblue ]\n    17 [ label = \"id#reviews\", shape=box, color=dodgerblue ]\n    18 [ label = \"Root#products\", shape=parallelogram, color=dodgerblue ]\n    19 [ label = \"updateProduct#products\", shape=box, color=dodgerblue ]\n    20 [ label = \"upc#products\", shape=box, color=dodgerblue ]\n    21 [ label = \"createProduct#products\", shape=box, color=dodgerblue ]\n    22 [ label = \"upc#products\", shape=box, color=dodgerblue ]\n    23 [ label = \"Root#accounts\", shape=parallelogram, color=dodgerblue ]\n    24 [ label = \"updateUser#accounts\", shape=box, color=dodgerblue ]\n    25 [ label = \"id#accounts\", shape=box, color=dodgerblue ]\n    26 [ label = \"createUser#accounts\", shape=box, color=dodgerblue ]\n    27 [ label = \"id#accounts\", shape=box, color=dodgerblue ]\n    0 -> 12 [ label = \"\" ]\n    0 -> 13 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 13 [ label = \"\", style=dashed,arrowhead=none ]\n    13 -> 14 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    14 -> 12 [ label = \"\", color=violet,arrowhead=none ]\n    12 -> 11 [ label = \"\" ]\n    14 -> 15 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    15 -> 11 [ label = \"\", color=violet,arrowhead=none ]\n    0 -> 10 [ label = \"\" ]\n    13 -> 16 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    16 -> 10 [ label = \"\", color=violet,arrowhead=none ]\n    10 -> 9 [ label = \"\" ]\n    16 -> 17 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    17 -> 9 [ label = \"\", color=violet,arrowhead=none ]\n    0 -> 8 [ label = \"\" ]\n    0 -> 18 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 18 [ label = \"\", style=dashed,arrowhead=none ]\n    18 -> 19 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    19 -> 8 [ label = \"\", color=violet,arrowhead=none ]\n    8 -> 7 [ label = \"\" ]\n    19 -> 20 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    20 -> 7 [ label = \"\", color=violet,arrowhead=none ]\n    0 -> 6 [ label = \"\" ]\n    18 -> 21 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    21 -> 6 [ label = \"\", color=violet,arrowhead=none ]\n    6 -> 5 [ label = \"\" ]\n    21 -> 22 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    22 -> 5 [ label = \"\", color=violet,arrowhead=none ]\n    0 -> 4 [ label = \"\" ]\n    0 -> 23 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 23 [ label = \"\", style=dashed,arrowhead=none ]\n    23 -> 24 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    24 -> 4 [ label = \"\", color=violet,arrowhead=none ]\n    4 -> 3 [ label = \"\" ]\n    24 -> 25 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    25 -> 3 [ label = \"\", color=violet,arrowhead=none ]\n    0 -> 2 [ label = \"\" ]\n    23 -> 26 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    26 -> 2 [ label = \"\", color=violet,arrowhead=none ]\n    2 -> 1 [ label = \"\" ]\n    26 -> 27 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    27 -> 1 [ label = \"\", color=violet,arrowhead=none ]\n}\n"
---
digraph {
    0 [ root]
    1 [ id]
    2 [ createUser]
    3 [ id]
    4 [ updateUser]
    5 [ upc]
    6 [ createProduct]
    7 [ upc]
    8 [ updateProduct]
    9 [ id]
    10 [ createReview]
    11 [ id]
    12 [ updateReview]
    13 [ Root#reviews]
    14 [ updateReview#reviews]
    15 [ id#reviews]
    16 [ createReview#reviews]
    17 [ id#reviews]
    18 [ Root#products]
    19 [ updateProduct#products]
    20 [ upc#products]
    21 [ createProduct#products]
    22 [ upc#products]
    23 [ Root#accounts]
    24 [ updateUser#accounts]
    25 [ id#accounts]
    26 [ createUser#accounts]
    27 [ id#accounts]
    0 -> 12 [ label = "Field" ]
    0 -> 13 [ label = "CreateChildResolver" ]
    0 -> 13 [ label = "HasChildResolver" ]
    13 -> 14 [ label = "CanProvide" ]
    14 -> 12 [ label = "Provides" ]
    12 -> 11 [ label = "Field" ]
    14 -> 15 [ label = "CanProvide" ]
    15 -> 11 [ label = "Provides" ]
    0 -> 10 [ label = "Field" ]
    13 -> 16 [ label = "CanProvide" ]
    16 -> 10 [ label = "Provides" ]
    10 -> 9 [ label = "Field" ]
    16 -> 17 [ label = "CanProvide" ]
    17 -> 9 [ label = "Provides" ]
    0 -> 8 [ label = "Field" ]
    0 -> 18 [ label = "CreateChildResolver" ]
    0 -> 18 [ label = "HasChildResolver" ]
    18 -> 19 [ label = "CanProvide" ]
    19 -> 8 [ label = "Provides" ]
    8 -> 7 [ label = "Field" ]
    19 -> 20 [ label = "CanProvide" ]
    20 -> 7 [ label = "Provides" ]
    0 -> 6 [ label = "Field" ]
    18 -> 21 [ label = "CanProvide" ]
    21 -> 6 [ label = "Provides" ]
    6 -> 5 [ label = "Field" ]
    21 -> 22 [ label = "CanProvide" ]
    22 -> 5 [ label = "Provides" ]
    0 -> 4 [ label = "Field" ]
    0 -> 23 [ label = "CreateChildResolver" ]
    0 -> 23 [ label = "HasChildResolver" ]
    23 -> 24 [ label = "CanProvide" ]
    24 -> 4 [ label = "Provides" ]
    4 -> 3 [ label = "Field" ]
    24 -> 25 [ label = "CanProvide" ]
    25 -> 3 [ label = "Provides" ]
    0 -> 2 [ label = "Field" ]
    23 -> 26 [ label = "CanProvide" ]
    26 -> 2 [ label = "Provides" ]
    2 -> 1 [ label = "Field" ]
    26 -> 27 [ label = "CanProvide" ]
    27 -> 1 [ label = "Provides" ]
}
