crates/engine-v2/query-solver/src/tests/snapshots/engine_v2_query_solver__tests__mutation__single_subgraph-graph.snap
---
source: engine/crates/engine-v2/query-solver/src/tests/mutation.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"id\" ]\n    2 [ label = \"createUser\" ]\n    3 [ label = \"id\" ]\n    4 [ label = \"updateUser\" ]\n    5 [ label = \"Root#accounts\", shape=parallelogram, color=dodgerblue ]\n    6 [ label = \"updateUser#accounts\", shape=box, color=dodgerblue ]\n    7 [ label = \"id#accounts\", shape=box, color=dodgerblue ]\n    8 [ label = \"createUser#accounts\", shape=box, color=dodgerblue ]\n    9 [ label = \"id#accounts\", shape=box, color=dodgerblue ]\n    0 -> 4 [ label = \"\" ]\n    0 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 5 [ label = \"\", style=dashed,arrowhead=none ]\n    5 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    6 -> 4 [ label = \"\", color=violet,arrowhead=none ]\n    4 -> 3 [ label = \"\" ]\n    6 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    7 -> 3 [ label = \"\", color=violet,arrowhead=none ]\n    0 -> 2 [ label = \"\" ]\n    5 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    8 -> 2 [ label = \"\", color=violet,arrowhead=none ]\n    2 -> 1 [ label = \"\" ]\n    8 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    9 -> 1 [ label = \"\", color=violet,arrowhead=none ]\n}\n"
---
digraph {
    0 [ root]
    1 [ id]
    2 [ createUser]
    3 [ id]
    4 [ updateUser]
    5 [ Root#accounts]
    6 [ updateUser#accounts]
    7 [ id#accounts]
    8 [ createUser#accounts]
    9 [ id#accounts]
    0 -> 4 [ label = "Field" ]
    0 -> 5 [ label = "CreateChildResolver" ]
    0 -> 5 [ label = "HasChildResolver" ]
    5 -> 6 [ label = "CanProvide" ]
    6 -> 4 [ label = "Provides" ]
    4 -> 3 [ label = "Field" ]
    6 -> 7 [ label = "CanProvide" ]
    7 -> 3 [ label = "Provides" ]
    0 -> 2 [ label = "Field" ]
    5 -> 8 [ label = "CanProvide" ]
    8 -> 2 [ label = "Provides" ]
    2 -> 1 [ label = "Field" ]
    8 -> 9 [ label = "CanProvide" ]
    9 -> 1 [ label = "Provides" ]
}
