crates/engine-v2/query-solver/src/tests/snapshots/engine_v2_query_solver__tests__mutation__single_subgraph-solved.snap
---
source: engine/crates/engine-v2/query-solver/src/tests/mutation.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"id\", color=forestgreen ]\n    2 [ label = \"id\", color=forestgreen ]\n    3 [ label = \"Root#accounts\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    4 [ label = \"updateUser#accounts\", shape=box, color=dodgerblue, color=forestgreen ]\n    5 [ label = \"id#accounts\", shape=box, color=dodgerblue, color=forestgreen ]\n    6 [ label = \"createUser#accounts\", shape=box, color=dodgerblue, color=forestgreen ]\n    7 [ label = \"id#accounts\", shape=box, color=dodgerblue, color=forestgreen ]\n    8 [ label=\"\", style=dashed]\n    0 -> 3 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    3 -> 4 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    4 -> 5 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    5 -> 2 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    3 -> 6 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    6 -> 7 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    7 -> 1 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    8 -> 0 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "id", steiner=1 ]
    2 [ label = "id", steiner=1 ]
    3 [ label = "Root#accounts", steiner=1 ]
    4 [ label = "updateUser#accounts", steiner=1 ]
    5 [ label = "id#accounts", steiner=1 ]
    6 [ label = "createUser#accounts", steiner=1 ]
    7 [ label = "id#accounts", steiner=1 ]
    8 [ label="", style=dashed]
    0 -> 3 [ cost=0, steiner=1]
    3 -> 4 [ cost=0, steiner=1]
    4 -> 5 [ cost=0, steiner=1]
    5 -> 2 [ cost=0, steiner=1]
    3 -> 6 [ cost=0, steiner=1]
    6 -> 7 [ cost=0, steiner=1]
    7 -> 1 [ cost=0, steiner=1]
    8 -> 0 [ cost=0, steiner=0]
}
